[gd_scene load_steps=8 format=3 uid="uid://cdb4fjddc57ey"]

[ext_resource type="Script" uid="uid://bfc0atikgasp2" path="res://Global Load/audio_manager.gd" id="1_dqkgi"]
[ext_resource type="AudioStream" uid="uid://cgdugaa8jv7w0" path="res://Art/Music/sfx/086409_retro-gun-shot-81545.mp3" id="2_2k4uf"]
[ext_resource type="AudioStream" uid="uid://d3t3jbu4q1ehl" path="res://Art/Music/sfx/gun-shot-sound-effect-224087.mp3" id="3_s0jef"]
[ext_resource type="AudioStream" uid="uid://ckk0b63fx5hps" path="res://Art/Music/sfx/laser-gun-81720.mp3" id="4_uoiqv"]
[ext_resource type="AudioStream" uid="uid://b0krjuh8a8mot" path="res://Art/Music/bgm/2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" id="5_754ab"]
[ext_resource type="AudioStream" uid="uid://dtj3rmi2ickj6" path="res://Art/Music/bgm/Malkuth battle 1,2.mp3" id="6_rlqb4"]
[ext_resource type="AudioStream" uid="uid://dqg1rev4mris2" path="res://Art/Music/sfx/arrow-swish_03-306040.mp3" id="7_duyiw"]

[node name="Audio_Manager" type="Node"]
script = ExtResource("1_dqkgi")

[node name="Shoot_Normal_Bullet" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2k4uf")
bus = &"SFX"

[node name="Shoot_Explosion_Bullet" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s0jef")
bus = &"SFX"

[node name="Shoot_Bullet_Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uoiqv")
bus = &"SFX"

[node name="Dash" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Sword_Attack" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Level_Up" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Player_Hurt" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Enemy_Hurt" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Main_BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_754ab")
bus = &"Music"
playback_type = 1

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rlqb4")
bus = &"Music"

[node name="Shoot_Arrow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_duyiw")
