extends Node

@onready var shoot_bullet = $Shoot_Bullet
@onready var Dash = $Dash
@onready var sword_attack = $Sword_Attack
@onready var shoot_bullet_laser = $Shoot_Bullet_Laser
@onready var level_up = $Level_Up
@onready var player_hurt = $Player_Hurt
@onready var enemy_hurt = $Enemy_Hurt
@onready var main_bgm = $Main_BGM
